# surveillance

./: .gitignore  README.md  camtest.py  funcs.py  main.py  motion.py  notizen  pyproject.toml  trackers.py
